erDiagram
    User ||--o{ GroupMembership : "has"
    User ||--o{ Submission : "submits"
    User ||--o{ Contest : "creates"
    User ||--o{ StudyGroup : "creates"
    User }o--o{ Authority : "has"
    
    Authority ||--o{ user_authorities : "in"
    User ||--o{ user_authorities : "in"
    
    Problem ||--o{ TestCase : "has"
    Problem ||--o{ Submission : "receives"
    Problem ||--o{ ContestProblem : "in"
    
    Submission ||--|| JudgeResult : "has"
    Submission }o--|| User : "submitted_by"
    Submission }o--|| Problem : "for"
    
    Contest ||--o{ ContestProblem : "contains"
    Contest ||--o{ ContestParticipant : "has"
    Contest }o--|| User : "created_by"
    
    ContestProblem }o--|| Contest : "belongs_to"
    ContestProblem }o--|| Problem : "references"
    
    ContestParticipant }o--|| Contest : "participates_in"
    ContestParticipant }o--|| StudyGroup : "as_team"
    
    StudyGroup ||--o{ GroupMembership : "has"
    StudyGroup ||--o{ ContestParticipant : "participates_as"
    StudyGroup }o--|| User : "created_by"
    
    GroupMembership }o--|| User : "member"
    GroupMembership }o--|| StudyGroup : "belongs_to"
    
    User {
        bigint id PK
        varchar userId UK
        varchar nickname UK
        varchar password
        varchar email UK
        varchar universityName
        varchar department
        varchar grade
    }
    
    Authority {
        varchar authority_name PK
    }
    
    user_authorities {
        bigint user_id FK
        varchar authority_name FK
    }
    
    Problem {
        bigint id PK
        varchar title
        text description
        text inputFormat
        text outputFormat
        int points
        int timeLimit
        int memoryLimit
        enum difficulty
        varchar language
        datetime createdAt
        datetime updatedAt
    }
    
    TestCase {
        bigint id PK
        bigint problem_id FK
        text input
        text output
        boolean isPublic
        datetime createdAt
        datetime updatedAt
    }
    
    Submission {
        bigint id PK
        bigint user_id FK
        bigint problem_id FK
        text code
        enum language
        enum status
        datetime submittedAt
    }
    
    JudgeResult {
        bigint id PK
        bigint submission_id FK UK
        enum status
        varchar message
        text output
        text errorOutput
        bigint executionTime
        bigint memoryUsage
        int score
        datetime judgedAt
    }
    
    Contest {
        bigint contest_id PK
        varchar title
        text description
        datetime startTime
        datetime endTime
        enum status
        bigint created_by FK
        datetime createdAt
        datetime updatedAt
    }
    
    ContestProblem {
        bigint contest_problem_id PK
        bigint contest_id FK
        bigint problem_id FK
        int score
        varchar problemAlias
    }
    
    ContestParticipant {
        bigint participant_id PK
        bigint contest_id FK
        bigint team_id FK
        datetime registeredAt
    }
    
    StudyGroup {
        bigint group_id PK
        varchar groupName
        int maxMembers
        varchar participationCode UK
        boolean isPublic
        bigint created_by FK
        datetime createdAt
        datetime updatedAt
    }
    
    GroupMembership {
        bigint membership_id PK
        bigint user_id FK
        bigint group_id FK
        enum role
        datetime joinedAt
        datetime leftAt
    }
    
    Word {
        bigint id PK
        varchar userId
        varchar word
        varchar translation
        varchar pronunciation
        varchar example
        datetime createdAt
        datetime updatedAt
    }

